2005-06-28 Alasdair Allan <aa@astro.ex.ac.uk>

        * Config/Simple.pm: Added a massively hacked version of Config::Simple
	  to the build. The real Config::Simple proved to be "not thread safe"
	  and I've had to totally reengineer the internals. This was not a
	  pleasant experience.
	  
2005-06-25 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/correlation_daemon.pl: Added SOAP client to push catalogues
	  to the wfcam_agent.pl
	  
	* bin/wfcam_agent.pl: populate_db() method now recieves 'n' serialised
	  Astro::Catalog obejcts. Current serialisation method is using the
	  standard Data::Dumper object. This was a lot harder than it sounds!  

2005-06-03 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/correlation_daemon.pl: Over the course of the last week
	  integrated the new features of Astro::Catlog V4 into the
	  correlation daemon. Time stamped and merged the new and variable
	  object detections to create "proper" catalogue summaries.

2005-06-03 Alasdair Allan <aa@astro.ex.ac.uk> &
           Brad Cavanagh <bradc@jach.hawaii.edu> 

        * bin/correlation_daemon.pl: Removed the Astro::Corlate code and
	  replaced with a mixture of Astro::Correlate and home grown Perl
	  code. While not as sophiticated as the f95 code this will give 
	  us a first cut at the variable star detection in a single waveband.
	  This code will not do multi-colour detection, so if there is a
	  colour term in the variability it will not detect it.
	  
	  Working correlation routine, the correlation_daemon.pl now does
	  full intra-frame correlation, creating a list of variable and 
	  new objects. Still need to merge the initial lists to create a
	  list of "all" objects. For now we can just pass back one of the
	  four/nine frames as this list as we'll need to do further
	  development on Astro::Catalog to allow us to do this...
	  
	* eSTAR/Logging.pm: Added a print_ncr() method.
	    
2005-06-02 Alasdair Allan <aa@astro.ex.ac.uk> 
