@@ -19,7 +19,7 @@
 #    Alasdair Allan (aa@astro.ex.ac.uk)
 
 #  Revision:
-#     $Id: data_miner.pl,v 1.8 2005/06/02 00:53:57 aa Exp $
+#     $Id: data_miner.pl,v 1.9 2005/06/29 23:37:40 aa Exp $
 
 #  Copyright:
 #     Copyright (C) 2003 University of Exeter. All Rights Reserved.
@@ -60,7 +60,7 @@ data mining process. It helps populate the survey agent's backend database.
 
 =head1 REVISION
 
-$Id: data_miner.pl,v 1.8 2005/06/02 00:53:57 aa Exp $
+$Id: data_miner.pl,v 1.9 2005/06/29 23:37:40 aa Exp $
 
 =head1 AUTHORS
 
@@ -77,7 +77,7 @@ Copyright (C) 2003 University of Exeter. All Rights Reserved.
 #  Version number - do this before anything else so that we dont have to 
 #  wait for all the modules to load - very quick
 BEGIN {
-  $VERSION = sprintf "%d.%d", q$Revision: 1.8 $ =~ /(\d+)\.(\d+)/;
+  $VERSION = sprintf "%d.%d", q$Revision: 1.9 $ =~ /(\d+)\.(\d+)/;
  
   #  Check for version number request - do this before real options handling
   foreach (@ARGV) {
@@ -140,7 +140,7 @@ $process->set_version( $VERSION );
 
 # need to use the generic "node_agent" urn instead of the process
 # id in this case...
-$process->set_urn( "user_agent" );
+$process->set_urn( "data_miner" );
 
 # C A T C H   S I G N A L S -------------------------------------------------
 
@@ -264,8 +264,8 @@ unless ( defined $status ) {
 #
 use POSIX qw/:sys_wait_h/;
 use Errno qw/EAGAIN/;
-use Proc::Simple;
-use Proc::Killfam;
+#use Proc::Simple;
+#use Proc::Killfam;
 use Digest::MD5 'md5_hex';
 
 #
@@ -339,11 +339,12 @@ if ( $config->get_state("mining.unique_process") == 1 ) {
    $config->set_option("server.host", $ip );
    $config->set_option("server.port", 8006 );
    
+   # db web service parameters
+   $config->set_option("db.host", $ip );
+   $config->set_option("db.port", 8005 );
+     
    # user agent parameters
    $config->set_option("agent.port", 8000 );
-   
-   # survey agent parameters
-   $config->set_option("survey.port", 8005 );
    
    # interprocess communication
    $config->set_option("agent.user", "agent" );
@@ -516,8 +517,8 @@ sub kill_agent {
    #}
 
    # kill -9 the agent process, hung threads should die screaming
-   killfam 9, ( $config->get_state( "mining.pid") );
-   #$log->warn( "Warning: Not calling killfam 9" );
+   #killfam 9, ( $config->get_state( "mining.pid") );
+   $log->warn( "Warning: Not calling killfam 9" );
    
    # close the door behind you!   
    exit;
@@ -526,6 +527,9 @@ sub kill_agent {
 # T I M E   A T   T H E   B A R  -------------------------------------------
 
 # $Log: data_miner.pl,v $
+# Revision 1.9  2005/06/29 23:37:40  aa
+# Gzipped & Base64 catalogue transfer, plus addition of a working data mining service
+#
 # Revision 1.8  2005/06/02 00:53:57  aa
 # Shipping to summit
 #
